RESOLVED FIXED 259186
REGRESSION(265827@main): Logical properties fail to override physical properties with variable references
https://bugs.webkit.org/show_bug.cgi?id=259186
Summary REGRESSION(265827@main): Logical properties fail to override physical propert...
Antti Koivisto
Reported 2023-07-13 06:31:51 PDT
and vice versa.
Attachments
Antti Koivisto
Comment 1 2023-07-13 06:32:19 PDT
Antti Koivisto
Comment 2 2023-07-13 06:39:50 PDT
EWS
Comment 3 2023-07-13 08:50:23 PDT
Committed 266033@main (593a553fd1eb): <https://commits.webkit.org/266033@main> Reviewed commits have been landed. Closing PR #15817 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.