Cherry-pick 593a553fd1eb. rdar://problem/112194939

REGRESSION(265827@main): Logical properties fail to override physical properties with variable references
    https://bugs.webkit.org/show_bug.cgi?id=259186
    rdar://112194939

    Reviewed by Simon Fraser.

    The code assumes that only values set later on the same property can override a variable reference.
    This is not true in case properties with separate physical and logical versions

    * LayoutTests/fast/css/variables/variable-reference-override-deferred-cached-expected.html: Added.
    * LayoutTests/fast/css/variables/variable-reference-override-deferred-cached.html: Added.
    * Source/WebCore/style/PropertyCascade.cpp:
    (WebCore::Style::PropertyCascade::addMatch):

    If we have seen any variable references overriding deferred properties start applying all subsequent
    deferred properties.

    Canonical link: https://commits.webkit.org/266033@main

Identifier: 265870.111@safari-7616-branch