Source/WebCore/style/PropertyCascade.cpp
@@ -233,6 +233,9 @@ bool PropertyCascade::addMatch(const MatchedProperties& matchedProperties, Casca
             if (m_includedProperties.contains(PropertyType::VariableReference)) {
                 if (current.value()->hasVariableReferences())
                     return true;
+                // Apply all deferred properties if we have applied any. They may override the ones we already applied.
+                if (propertyID >= firstDeferredProperty && m_lastIndexForDeferred)
+                    return true;
             }
             if (m_includedProperties.containsAny({ PropertyType::AfterAnimation, PropertyType::AfterTransition })) {
                 if (shouldApplyAfterAnimation(current)) {
